style.css
@layer template;

* {
  box-sizing: border-box;
}

:root {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.5;
  --primary-color: #2563eb;
  scroll-behavior: smooth;
  font-size: 1rem !important;
}

html {
  min-width: 0;
}

body {
  font-family: 'Poppins', sans-serif;
  min-width: 0;
}

.img-fluid {
  width: 10.625rem;
}

.nav-link {
  position: relative;
  padding-inline: 0.8rem;
}

.nav-link::before {
  content: '';
  position: absolute;
  background-image: linear-gradient(to right, #2563eb, #06b6d4);
  width: 100%;
  height: 0.3rem;
  bottom: -0.3rem;
  left: 0;
  border-radius: 3rem;
  scale: 0 1;
  transition: scale 0.3s;
}

.nav-link:hover::before {
  scale: 1 1;
}

.hero-heading {
  -webkit-text-fill-color: transparent;
  background-image: linear-gradient(45deg, #2563eb, #06b6d4, #2563eb);
  -webkit-background-clip: text;
  background-size: 200%;
  animation: gradient-animation 2s alternate infinite;
  line-height: 0.9;
}

.text-gray {
  color: rgb(54, 54, 54);
}

.get-a-call {
  background-color: rgba(255, 255, 255, 0.685);
  font-weight: bold;
  color: #2563eb;
  font-weight: bold;
}

.get-a-call:hover {
  background-color: #2563eb;
  color: white;
}

.get-a-call i {
  animation: call 2s alternate infinite;
}



.service-card-container {
  /* outline: 1px solid black; */
  display: flex;
  align-items: flex-start;
  justify-content: space-around;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
  margin-top: 2rem;

}

.service-card {
  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  border-radius: 5%;
  max-width: none;
  max-height: none;
  min-width: auto;
  min-height: auto;
  width: calc(33.33% - 2rem);
  background-color: #fafafa;
  border: 1px solid hsl(0, 0%, 88%);
  flex: none;
  aspect-ratio: 1/1;
  display: block;
  box-sizing: border-box;
  min-width: 20rem;
}

.navbar {
  backdrop-filter: blur(15px);
}

.banner {
  background-image: url("./images/bg/main-banner.webp");
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: 10rem 2rem;
  box-shadow: 0 -20px 20px white inset;
  height: 100vh;
}



@media (width <450px) {

  .hero-heading {
    line-height: 1;
  }

  .banner .block {
    padding-top: 0;
  }

  .banner {
    text-align: center;
    background-image: none;
    padding-block: 5rem 1rem;
    max-height: auto;
    min-height: auto;
    height: auto;
  }

  .about {
    padding-block: 2rem;
  }

  .service-card {
    width: 90%;
    height: fit-content;
    aspect-ratio: auto;
    padding-bottom: 1rem;
  }

  .why-choose-us-container {
    padding-block: 2rem;

  }




}





@keyframes gradient-animation {
  from {
    background-position: 0% 0%;
  }

  to {
    background-position: 100% 0%;
  }
}

@keyframes call {
  from {
    scale: 1;
    translate: 0;
  }

  to {
    scale: 1.5;
    translate: 0.5rem;
  }
}

